@@ -1,5 +1,8 @@
 2007-01-16 Sandro Santilli <strk@refractions.net>
 
+	* source/index/strtree/STRtree.cpp (yComparator): 
+	  Use static_cast<> and make code more readable.
+	  A side effect seems to be fixing a segfault :!
 	* source/headers/geos/index/strtree/STRtree.h (centreY):
 	  const-corrected.
 	* tests/xmltester/XMLTester.cpp: don't include catch-all headers.
